--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Logan Hasty",
@@ -12,6 +12,6 @@
   "dependencies": {
     "luxon": "^3.2.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "express": "4.18.2"
   }
 }
