--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "luxon": "^3.2.1",
     "multer": "^1.4.5-lts.1",
-    "express": "4.18.2"
+    "express": "4.18"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
