--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "npm install",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
