--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "npm install",
+    "build": "npm install; npm run build",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
