--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "npm install; npm run build",
-    "start": "node app.js",
+    "build": "npm install",
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Logan Hasty",
@@ -14,8 +14,5 @@
     "luxon": "^3.2.1",
     "multer": "^1.4.5-lts.1",
     "express": "4.18"
-  },
-  "engines": {
-    "node": ">=14 <15"
   }
 }
