--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "luxon": "^3.2.1",
     "multer": "^1.4.5-lts.1",
-    "express": "4.18"
+    "express": "4.18",
+    "morgan": "1.10.0"
   }
 }
