--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "luxon": "^3.2.1",
     "multer": "^1.4.5-lts.1",
     "express": "4.18",
+    "ejs": "3.1.8",
     "morgan": "1.10.0",
     "method-override": "3.0.0",
     "uuid": "9.0.0"
